Fix shift caused by scroll bar

--- a/frontend/assets/styles/global.css
+++ b/frontend/assets/styles/global.css
@@ -1,6 +1,7 @@
 html {
   font-family: 'Montserrat', sans-serif;
   color: #1C1C1E;
+  overflow-y: scroll;
 }
 
 a, a:hover {
